[gd_scene load_steps=6 format=2]

[ext_resource path="res://Floor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://MovingBody.tscn" type="PackedScene" id=3]
[ext_resource path="res://MovingBody.gd" type="Script" id=4]
[ext_resource path="res://crosshair.png" type="Texture" id=5]

[node name="Demo" type="Spatial" index="0"]

_sections_unfolded = [ "Transform" ]

[node name="Floor" parent="." index="0" instance=ExtResource( 1 )]

[node name="Wall" parent="." index="1" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -46.8764 )

[node name="Wall2" parent="." index="2" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 47 )

[node name="Wall3" parent="." index="3" instance=ExtResource( 2 )]

transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 47, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Wall4" parent="." index="4" instance=ExtResource( 2 )]

transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, -47, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="MovingBody" parent="." index="5" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.4858, 0 )
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="CameraBase" type="Spatial" parent="MovingBody" index="2"]

[node name="CameraRotation" type="Spatial" parent="MovingBody/CameraBase" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.4858, 0 )

[node name="Camera" type="Camera" parent="MovingBody/CameraBase/CameraRotation" index="0"]

transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 9.4858, 10 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0

[node name="DirectionalLight" type="DirectionalLight" parent="." index="6"]

transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 19, 0 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Shadow" ]

[node name="CrosshairLayer" type="CanvasLayer" parent="." index="7"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Crosshair" type="TextureRect" parent="CrosshairLayer" index="0"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 0
_sections_unfolded = [ "Visibility" ]


